# theatre-api

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  theatre_api_fixture.json
theatre/: admin.py  models.py  serializers.py  urls.py  views.py
theatre/migrations/: 0001_initial.py  0002_initial.py  0003_play_image.py
theatre_api/: asgi.py  settings.py  urls.py  wsgi.py
user/migrations/: 0001_initial.py
