[tool.poetry]
name = "theatre-api"
version = "0.1.0"
description = ""
authors = ["Bondzik-S <bondziks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.4"
asgiref = "3.8.1"
attrs = "24.3.0"
django-debug-toolbar = "4.4.6"
django-rest-framework = "0.1.0"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
drf-spectacular = "0.28.0"
inflection = "0.5.1"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
pillow = "11.0.0"
pyjwt = "2.10.1"
pyyaml = "6.0.2"
referencing = "0.35.1"
rpds-py = "0.22.3"
sqlparse = "0.5.3"
uritemplate = "4.1.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
